--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         app:titleTextColor="#050505" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/wifi"
         android:layout_width="192dp"
         android:layout_height="94dp"
         android:layout_alignParentStart="true"
@@ -38,7 +38,7 @@
         android:text="Wifi" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/bluetooth"
         android:layout_width="192dp"
         android:layout_height="94dp"
         android:layout_alignParentStart="true"
