--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="97dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="652dp"
+        android:layout_marginBottom="536dp"
         android:background="@color/teal_700"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                 Suction cups manipulation"
@@ -39,80 +39,80 @@
         app:titleTextColor="#050505" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/suctionCup3"
         android:layout_width="111dp"
         android:layout_height="105dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="365dp"
+        android:layout_marginStart="239dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="235dp"
+        android:background="@drawable/circle_button"
+        android:backgroundTint="#FF8A80" />
+
+    <ImageButton
+        android:id="@+id/suctionCup1"
+        android:layout_width="111dp"
+        android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginBottom="422dp"
+        android:background="@drawable/circle_button"
+        android:backgroundTint="#FF8A80" />
+
+    <ImageButton
+        android:id="@+id/suctionCup2"
+        android:layout_width="111dp"
+        android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="62dp"
+        android:layout_marginEnd="237dp"
+        android:layout_marginBottom="235dp"
+        android:background="@drawable/circle_button"
+        android:backgroundTint="#FF8A80" />
+
+    <ImageButton
+        android:id="@+id/innerSuctionCups"
+        android:layout_width="111dp"
+        android:layout_height="105dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginBottom="312dp"
         android:background="@drawable/circle_button"
         android:backgroundTint="#EA0909" />
 
-    <ImageButton
-        android:id="@+id/imageButton1"
-        android:layout_width="111dp"
-        android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="246dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="288dp"
-        android:background="@drawable/circle_button"
-        android:backgroundTint="#FF8A80" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="111dp"
-        android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="69dp"
-        android:layout_marginEnd="231dp"
-        android:layout_marginBottom="288dp"
-        android:background="@drawable/circle_button"
-        android:backgroundTint="#FF8A80" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="111dp"
-        android:layout_height="105dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="156dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="475dp"
-        android:background="@drawable/circle_button"
-        android:backgroundTint="#FF8A80" />
-
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/perimeterCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="123dp"
-        android:layout_marginEnd="97dp"
-        android:layout_marginBottom="168dp"
-        android:text="All suction cups on/off" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="192dp"
-        android:layout_height="94dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="123dp"
-        android:layout_marginEnd="98dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginEnd="105dp"
+        android:layout_marginBottom="20dp"
         android:text="Perimeter cups on/middle cups off" />
+
+    <Button
+        android:id="@+id/allSuctionCups"
+        android:layout_width="192dp"
+        android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="114dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="129dp"
+        android:text="All suction cups on/off" />
 
 
 </RelativeLayout>
