added layout_weight for scalability

--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="#FFFEFE"
     android:backgroundTint="#7E9A97"
 
@@ -13,12 +14,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_centerInParent="true" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="97dp"
+        android:layout_weight="1"
         android:background="@color/purple_500"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                  Connected to your Robot"
@@ -30,6 +33,7 @@
         android:id="@+id/toolbar1"
         android:layout_width="match_parent"
         android:layout_height="97dp"
+        android:layout_weight="1"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="536dp"
         android:background="@color/teal_700"
@@ -42,6 +46,7 @@
         android:id="@+id/suctionCup3"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -55,6 +60,7 @@
         android:id="@+id/suctionCup1"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -68,6 +74,7 @@
         android:id="@+id/suctionCup2"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -81,6 +88,7 @@
         android:id="@+id/innerSuctionCups"
         android:layout_width="111dp"
         android:layout_height="105dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -94,6 +102,7 @@
         android:id="@+id/perimeterCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -106,6 +115,7 @@
         android:id="@+id/allSuctionCups"
         android:layout_width="192dp"
         android:layout_height="94dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
