--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="#FFFEFE"
-    android:backgroundTint="#1BDAAE"
+    android:backgroundTint="#FFFFFF"
 
     tools:context="com.example.myapplication.MainActivity">
 
@@ -13,41 +14,50 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_centerInParent="true" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="?attr/colorPrimary"
+        android:layout_weight="1"
+        android:background="#8BC34A"
+        android:textAlignment="center"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
-        app:title="                    Connect to your Robot"
+        app:title="                 Connect to your Robot"
         app:titleMargin="4dp"
-        app:titleTextColor="#050505" />
-
-    <Button
-        android:id="@+id/wifi"
-        android:layout_width="192dp"
-        android:layout_height="94dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="129dp"
-        android:layout_marginEnd="90dp"
-        android:layout_marginBottom="386dp"
-        android:text="Wifi" />
+        app:titleTextColor="#000000" />
 
     <Button
         android:id="@+id/bluetooth"
         android:layout_width="192dp"
         android:layout_height="94dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="129dp"
-        android:layout_marginEnd="91dp"
+        android:layout_marginStart="111dp"
+        android:layout_marginEnd="109dp"
         android:layout_marginBottom="239dp"
+        android:background="#3F51B5"
         android:text="Bluetooth" />
+
+    <Button
+        android:id="@+id/wifi"
+        android:layout_width="192dp"
+        android:layout_height="94dp"
+        android:layout_weight="1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="111dp"
+        android:layout_marginEnd="108dp"
+        android:layout_marginBottom="386dp"
+        android:background="#3F51B5"
+        android:text="Wifi"
+        android:textColor="#FFFFFF"
+        app:iconTint="#3F51B5" />
 
 
 </RelativeLayout>
