--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
     android:background="#FFFEFE"
     android:backgroundTint="#1BDAAE"
 
@@ -13,12 +14,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_centerInParent="true" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        android:layout_weight="1"
         android:background="@color/purple_500"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                    Connected to your Robot"
@@ -30,6 +33,7 @@
         android:id="@+id/clk1"
         android:layout_width="74dp"
         android:layout_height="72dp"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="92dp"
@@ -42,10 +46,11 @@
         android:id="@+id/aclk1"
         android:layout_width="74dp"
         android:layout_height="72dp"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="210dp"
-        android:layout_marginBottom="440dp"
+        android:layout_marginEnd="258dp"
+        android:layout_marginBottom="438dp"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
@@ -57,6 +62,7 @@
         android:id="@+id/clk2"
         android:layout_width="74dp"
         android:layout_height="72dp"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="187dp"
@@ -70,10 +76,11 @@
         android:id="@+id/aclk2"
         android:layout_width="74dp"
         android:layout_height="72dp"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="304dp"
-        android:layout_marginBottom="277dp"
+        android:layout_marginEnd="352dp"
+        android:layout_marginBottom="276dp"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
@@ -85,6 +92,7 @@
         android:id="@+id/clk3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="4dp"
@@ -97,10 +105,11 @@
         android:id="@+id/aclk3"
         android:layout_width="74dp"
         android:layout_height="72dp"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="277dp"
+        android:layout_marginEnd="167dp"
+        android:layout_marginBottom="273dp"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
@@ -112,6 +121,7 @@
         android:id="@+id/fw1"
         android:layout_width="59dp"
         android:layout_height="56dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -125,6 +135,7 @@
         android:id="@+id/fw3"
         android:layout_width="61dp"
         android:layout_height="59dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -138,6 +149,7 @@
         android:id="@+id/fw2"
         android:layout_width="wrap_content"
         android:layout_height="58dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -151,6 +163,7 @@
         android:id="@+id/bw2"
         android:layout_width="59dp"
         android:layout_height="58dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -164,6 +177,7 @@
         android:id="@+id/bw3"
         android:layout_width="59dp"
         android:layout_height="55dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -177,6 +191,7 @@
         android:id="@+id/bw1"
         android:layout_width="59dp"
         android:layout_height="52dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -190,6 +205,7 @@
         android:id="@+id/drillMode"
         android:layout_width="137dp"
         android:layout_height="91dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -202,6 +218,7 @@
         android:id="@+id/suctionCups"
         android:layout_width="137dp"
         android:layout_height="91dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -214,6 +231,7 @@
         android:id="@+id/imageButton"
         android:layout_width="47dp"
         android:layout_height="55dp"
+        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -226,6 +244,7 @@
         android:id="@+id/Home"
         android:layout_width="138dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="233dp"
@@ -236,6 +255,7 @@
         android:id="@+id/raiseEE"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="32dp"
