--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_weight="1">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         android:background="#FFFEFE"
         android:backgroundTint="#1BDAAE"
 
@@ -19,12 +21,14 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_centerInParent="true" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="120dp"
+            android:layout_weight="1"
             android:background="?attr/colorPrimary"
             android:textAlignment="center"
             app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
@@ -36,6 +40,7 @@
             android:id="@+id/toolbar3"
             android:layout_width="match_parent"
             android:layout_height="82dp"
+            android:layout_weight="1"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="531dp"
             android:background="#FFEB3B"
@@ -49,6 +54,7 @@
             android:id="@+id/manipList"
             android:layout_width="335dp"
             android:layout_height="466dp"
+            android:layout_weight="1"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="39dp"
