--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="1"
-    android:background="#FFFEFE"
-    android:backgroundTint="#FFFFFF"
+    android:background="#3F51B5"
 
+    android:backgroundTint="#FFFFFF"
     tools:context="com.example.myapplication.MainActivity">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_weight="1"
-        android:layout_centerInParent="true" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -24,6 +30,8 @@
         android:layout_weight="1"
         android:background="#8BC34A"
         android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
         app:title="                 Connect to your Robot"
         app:titleMargin="4dp"
@@ -33,31 +41,31 @@
         android:id="@+id/bluetooth"
         android:layout_width="192dp"
         android:layout_height="94dp"
-        android:layout_weight="1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="111dp"
         android:layout_marginEnd="109dp"
         android:layout_marginBottom="239dp"
+        android:layout_weight="1"
         android:background="#3F51B5"
-        android:text="Bluetooth" />
+        android:text="Bluetooth"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/wifi"
         android:layout_width="192dp"
         android:layout_height="94dp"
-        android:layout_weight="1"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="111dp"
         android:layout_marginEnd="108dp"
         android:layout_marginBottom="386dp"
+        android:layout_weight="1"
         android:background="#3F51B5"
         android:text="Wifi"
         android:textColor="#FFFFFF"
-        app:iconTint="#3F51B5" />
+        app:iconTint="#3F51B5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
