--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:background="#FFFEFE"
-    android:backgroundTint="#1BDAAE"
+    android:backgroundTint="#FFFFFF"
 
     tools:context="com.example.myapplication.MainActivity">
 
@@ -14,11 +14,11 @@
         android:id="@+id/extraFineUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="42dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/arrow_up_float" />
@@ -27,11 +27,11 @@
         android:id="@+id/fineUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="27dp"
         android:layout_marginBottom="112dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/arrow_up_float" />
@@ -40,11 +40,11 @@
         android:id="@+id/extraFineDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="295dp"
         android:layout_marginBottom="44dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/arrow_down_float" />
@@ -53,11 +53,11 @@
         android:id="@+id/largeDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="295dp"
         android:layout_marginBottom="182dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/arrow_down_float" />
@@ -66,11 +66,11 @@
         android:id="@+id/fineDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="295dp"
         android:layout_marginBottom="113dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/arrow_down_float" />
@@ -79,163 +79,174 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:layout_weight="1" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
+        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:layout_weight="1"
-        android:background="@color/purple_500"
+        android:background="#8BC34A"
+        android:textAlignment="center"
         app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
-        app:title="                    Connected to your Robot"
+        app:title="                Connected to your Robot"
         app:titleMargin="4dp"
         app:titleTextColor="#050505" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="79dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="169dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="335dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginEnd="161dp"
+        android:layout_marginBottom="331dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button" />
 
     <Button
         android:id="@+id/bw3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="95dp"
+        android:layout_height="88dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="81dp"
+        android:layout_marginStart="52dp"
         android:layout_marginEnd="264dp"
-        android:layout_marginBottom="381dp"
+        android:layout_marginBottom="379dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
+        android:backgroundTint="#FF9800"
         android:text="BW3" />
 
     <Button
         android:id="@+id/fw1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="87dp"
+        android:layout_height="85dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="176dp"
-        android:layout_marginEnd="169dp"
+        android:layout_marginStart="166dp"
+        android:layout_marginEnd="158dp"
         android:layout_marginBottom="419dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
+        android:backgroundTint="#FF9800"
         android:text="FW1" />
 
     <Button
         android:id="@+id/bw2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="91dp"
+        android:layout_height="88dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="270dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginBottom="381dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
+        android:backgroundTint="#FF9800"
         android:text="BW2" />
 
     <Button
         android:id="@+id/fw3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="88dp"
+        android:layout_height="85dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="270dp"
-        android:layout_marginEnd="76dp"
-        android:layout_marginBottom="289dp"
+        android:layout_marginEnd="53dp"
+        android:layout_marginBottom="272dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
+        android:backgroundTint="#FF9800"
         android:text="FW3" />
 
     <Button
         android:id="@+id/fw2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="96dp"
+        android:layout_height="90dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="50dp"
         android:layout_marginEnd="265dp"
-        android:layout_marginBottom="287dp"
+        android:layout_marginBottom="269dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
+        android:backgroundTint="#FF9800"
         android:text="FW2" />
 
     <Button
         android:id="@+id/bw1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_width="90dp"
+        android:layout_height="87dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="173dp"
-        android:layout_marginEnd="172dp"
-        android:layout_marginBottom="256dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginEnd="158dp"
+        android:layout_marginBottom="236dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
-        android:text="BW1" />
+        android:color="#FF9800"
+        android:text="BW1"></Button>
 
     <Button
         android:id="@+id/circular"
-        android:layout_width="wrap_content"
+        android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="155dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginBottom="553dp"
+        android:layout_marginStart="142dp"
+        android:layout_marginEnd="142dp"
+        android:layout_marginBottom="555dp"
+        android:layout_weight="1"
         android:text="Circular" />
 
     <Button
         android:id="@+id/rectangular"
-        android:layout_width="wrap_content"
+        android:layout_width="178dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="135dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="503dp"
+        android:layout_marginStart="115dp"
+        android:layout_marginEnd="118dp"
+        android:layout_marginBottom="509dp"
+        android:layout_weight="1"
         android:text="RECTANGULAR" />
 
     <Button
         android:id="@+id/addNew"
         android:layout_width="wrap_content"
-        android:layout_height="83dp"
-        android:layout_weight="1"
+        android:layout_height="73dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="514dp"
-        android:text="Add New" />
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="528dp"
+        android:layout_weight="1"
+        android:text="Add New" >
+    </Button>
+
+
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="79dp"
         android:layout_marginBottom="57dp"
+        android:layout_weight="1"
         android:text="Extra Fine Retract"
         android:textColor="#000000"
         android:textSize="24sp" />
@@ -244,11 +255,11 @@
         android:id="@+id/textView4"
         android:layout_width="163dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="127dp"
+        android:layout_weight="1"
         android:text="Fine Retract"
         android:textColor="#000000"
         android:textSize="24sp" />
@@ -257,11 +268,11 @@
         android:id="@+id/textView3"
         android:layout_width="163dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="191dp"
+        android:layout_weight="1"
         android:text="Large Retract"
         android:textSize="24sp" />
 
@@ -269,14 +280,20 @@
         android:id="@+id/largeup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="184dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/arrow_up_float" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
