--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:background="#FFFEFE"
-        android:backgroundTint="#1BDAAE"
+        android:backgroundTint="#1B2140"
 
         tools:context="com.example.myapplication.MainActivity"
         tools:layout_editor_absoluteX="16dp"
@@ -21,15 +21,15 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:layout_weight="1" />
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="104dp"
             android:layout_weight="1"
-            android:background="?attr/colorPrimary"
+            android:background="#8BC34A"
             android:textAlignment="center"
             app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
             app:title="                Connected to your Robot"
@@ -40,9 +40,11 @@
             android:id="@+id/toolbar3"
             android:layout_width="match_parent"
             android:layout_height="82dp"
-            android:layout_weight="1"
+            android:layout_below="@+id/toolbar"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="531dp"
+            android:layout_marginTop="-4dp"
+            android:layout_marginBottom="533dp"
+            android:layout_weight="1"
             android:background="#FFEB3B"
             android:textAlignment="center"
             app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
@@ -54,12 +56,12 @@
             android:id="@+id/manipList"
             android:layout_width="335dp"
             android:layout_height="466dp"
-            android:layout_weight="1"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="39dp"
             android:layout_marginBottom="46dp"
-            android:background="@color/white" />
+            android:layout_weight="1"
+            android:background="#FFFFFF" />
 
 
     </RelativeLayout>
