--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:background="#FFFEFE"
-    android:backgroundTint="#1BDAAE"
+    android:backgroundTint="#FFFFFF"
 
     tools:context="com.example.myapplication.MainActivity">
 
@@ -14,8 +14,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:layout_weight="1" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -33,24 +33,27 @@
         android:id="@+id/clk1"
         android:layout_width="74dp"
         android:layout_height="72dp"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="92dp"
         android:layout_marginBottom="440dp"
+        android:layout_weight="1"
+        android:background="#FFEB3B"
+        android:backgroundTint="#FFEB3B"
         android:clickable="true"
-        app:backgroundTint="#FFEB3B"
+        android:foregroundTint="#000000"
+        app:backgroundTint="#000000"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/aclk1"
         android:layout_width="74dp"
         android:layout_height="72dp"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="258dp"
         android:layout_marginBottom="438dp"
+        android:layout_weight="1"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
@@ -62,11 +65,11 @@
         android:id="@+id/clk2"
         android:layout_width="74dp"
         android:layout_height="72dp"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="187dp"
         android:layout_marginBottom="275dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
@@ -76,11 +79,11 @@
         android:id="@+id/aclk2"
         android:layout_width="74dp"
         android:layout_height="72dp"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="352dp"
         android:layout_marginBottom="276dp"
+        android:layout_weight="1"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
@@ -92,11 +95,11 @@
         android:id="@+id/clk3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="277dp"
+        android:layout_weight="1"
         android:clickable="true"
         app:backgroundTint="#FFEB3B"
         app:srcCompat="@android:drawable/ic_menu_rotate" />
@@ -105,11 +108,11 @@
         android:id="@+id/aclk3"
         android:layout_width="74dp"
         android:layout_height="72dp"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="167dp"
         android:layout_marginBottom="273dp"
+        android:layout_weight="1"
         android:clickable="true"
         android:rotation="0"
         android:rotationX="0"
@@ -121,13 +124,13 @@
         android:id="@+id/fw1"
         android:layout_width="59dp"
         android:layout_height="56dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="154dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="438dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:text="FW1" />
 
@@ -135,13 +138,13 @@
         android:id="@+id/fw3"
         android:layout_width="61dp"
         android:layout_height="59dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="242dp"
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="274dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:text="FW3" />
 
@@ -149,13 +152,13 @@
         android:id="@+id/fw2"
         android:layout_width="wrap_content"
         android:layout_height="58dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="243dp"
         android:layout_marginBottom="274dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:text="FW2" />
 
@@ -163,13 +166,13 @@
         android:id="@+id/bw2"
         android:layout_width="59dp"
         android:layout_height="58dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="243dp"
         android:layout_marginEnd="61dp"
         android:layout_marginBottom="374dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:text="BW2" />
 
@@ -177,13 +180,13 @@
         android:id="@+id/bw3"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="244dp"
         android:layout_marginBottom="376dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:text="BW3" />
 
@@ -191,13 +194,13 @@
         android:id="@+id/bw1"
         android:layout_width="59dp"
         android:layout_height="52dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="154dp"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="202dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button"
         android:text="BW1" />
 
@@ -205,61 +208,61 @@
         android:id="@+id/drillMode"
         android:layout_width="137dp"
         android:layout_height="91dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="266dp"
         android:layout_marginBottom="7dp"
+        android:layout_weight="1"
         android:text="Drill mode" />
 
     <Button
         android:id="@+id/suctionCups"
         android:layout_width="137dp"
         android:layout_height="91dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="266dp"
         android:layout_marginEnd="7dp"
         android:layout_marginBottom="4dp"
+        android:layout_weight="1"
         android:text="Suction cups" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="47dp"
         android:layout_height="55dp"
-        android:layout_weight="1"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="157dp"
         android:layout_marginEnd="159dp"
         android:layout_marginBottom="332dp"
+        android:layout_weight="1"
         android:background="@drawable/circle_button" />
 
     <Button
         android:id="@+id/Home"
         android:layout_width="138dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="233dp"
         android:layout_marginBottom="523dp"
+        android:layout_weight="1"
         android:text="Go to home orientation" />
 
     <Button
         android:id="@+id/raiseEE"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="524dp"
+        android:layout_weight="1"
         android:text="Raise End Effector" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
